--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <title>Excursion</title>
 <head>
     <link href="Resources/CSS/style.css" rel="stylesheet" type="text/css" >
@@ -8,4 +9,19 @@
         <h1>Discover hidden places in the world around you</h1>
         <p>Download Excursion (Coming Soon)</p>
     </header>
+    <main>
+        <video src="Resources/excursion.mp4" type="mp4">Video Not Supported</video>
+        <div>
+            <h2>Your personal travel guide</h2>
+            <h3>Excursion remembers places you like, and recommends new points of interest around you</h3>
+            <p><img src="Resources/camp.jpg" /> </p>
+            <p><img src="Resources/phone.png" /></p>
+            <h2>Coming soon for iPhone and Android</h2>
+            <p>Download Excursion (Coming Soon)</p>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; Excursion</p>
+    </footer>
 </body>
+</html>
