fixed underline and video play

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p>Download Excursion (Coming Soon)</p>
     </header>
     <main>
-        <video src="Resources/excursion.mp4" type="mp4">Video Not Supported</video>
+        <video src="Resources/excursion.mp4" type="mp4" autoplay>Video Not Supported</video>
         <div>
             <h2>Your personal travel guide</h2>
             <h3>Excursion remembers places you like, and recommends new points of interest around you</h3>
@@ -21,7 +21,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; Excursion</p>
+        <p id="footer">&copy; Excursion</p>
     </footer>
 </body>
 </html>
